# pyspecan

./: .gitignore  README.md  builder.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  deploy-executable.yml  main.yml  python-publish.yml
docs/: config.html  err.html  index.html  logger.html  specan.html
docs/backend/: index.html
docs/backend/mpl/: ax.html  base.html  color.html  index.html  plot.html  theme.html
docs/backend/tk/: index.html  theme.html
docs/controller/: base.html  controller.html  cui.html  gui.html  index.html  tk_gui.html
docs/controller/CUI/: base.html  index.html  plot_base.html
docs/controller/GUI/: base.html  index.html  rt.html  swept.html
docs/controller/tkGUI/: base.html  dispatch.html  index.html  mode.html  mode_rt.html  mode_swept.html  modes.html  panels.html  plot_base.html  rt.html  sink.html  sink_file.html  sink_live.html  swept.html
docs/model/: base.html  index.html  mode_rt.html  mode_swept.html  model.html  modes.html  reader.html
docs/model/mode/: index.html  mode.html  rt.html  swept.html
docs/model/sink/: file.html  index.html  live.html  sink.html
docs/plot/: base.html  color.html  index.html  plot.html
docs/plot/mpl/: base.html  color.html  index.html
docs/utils/: args.html  dialog.html  index.html  matrix.html  monitor.html  pmf.html  psd.html  save.html  stft.html  time.html  vbw.html  window.html
docs/view/: base.html  cui.html  gui.html  index.html  tk_gui.html  view.html
docs/view/CUI/: base.html  index.html
docs/view/GUI/: base.html  index.html  manager.html  persistent.html  plot.html  psd.html  rt.html  swept.html
src/: build.spec  pyspecan.spec
src/pyspecan/: __init__.py  __main__.py  config.py  specan.py
tests/: dev.py  dev_pmf.py  main.py
tests/dev/: 3dspg.py  gnuplot.py  panels.py  pmf.py  sink_file.py  sink_file_rt.py  sink_hackrf.py  sink_hackrf_rt.py
(+104 files in other folders)
