[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspecan"
version = "0.5.2"
description = "A spectrum analyzer library"
readme = "README.md"
license-files = "LICENSE"
requires-python = ">=3.8"
authors = [
    {name = "Anonoei", email="to+dev@an0.us"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",

    "Topic :: Scientific/Engineering",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Operating System :: OS Independent",
]
keywords = ["anonoei", "sdr", "speca", "specan"]
dependencies = ["numpy", "matplotlib", "pysdrlib"]

[project.optional-dependencies]
dev = ["twine", "build", "bumpver", "pytest", "pdoc3"]

[project.scripts]
pyspecan-cui = "pyspecan._internal.main:main_cli_swept"
pyspecan-cui-rt = "pyspecan._internal.main:main_cli_rt"

[project.gui-scripts]
pyspecan = "pyspecan._internal.main:main_gui_swept"
pyspecan-rt = "pyspecan._internal.main:main_gui_rt"

[project.urls]
Homepage = "https://github.com/anonoei/pyspecan"
Documentation = "https://anonoei.github.io/pyspecan/"
Repository = "https://github.com/Anonoei/pyspecan.git"
Issues = "https://github.com/Anonoei/pyspecan/issues"
Source = "https://github.com/anonoei/pyspecan"

[tool.bumpver]
current_version = "0.5.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/pyspecan/__init__.py" = ["{version}"]
